build(cz-git): :package: 增加疏漏的 配置

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   },
   "dependencies": {
     "http-server": "^14.1.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
   }
 }
